--- a/workflow-templates/build-netcore.yml
+++ b/workflow-templates/build-netcore.yml
@@ -1,10 +1,10 @@
-name: Build .Net Core
+name: Build .Net
 
 on:
   push:
-    branches: [$default-branch]
+    branches: [ $default-branch ]
   pull_request:
-    branches: [$default-branch]
+    branches: [ $default-branch ]
 
 jobs:
   build_netcore:
