add template for snyk github actions for python

--- a/workflow-templates/scan-python-code-snyk.yml
+++ b/workflow-templates/scan-python-code-snyk.yml
@@ -1,5 +1,9 @@
 # This is workflow to check vulnerablities in your python source code
 name: Sample workflow of using Snyk for python application
+on:
+  push:
+    branches:
+      - master  
 
 jobs:
   security:
